--- a/Action/app/src/main/res/values/strings.xml
+++ b/Action/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="Caction">動作</string>
+    <string name="CTable">課表</string>
+    <string name="CStatistics">統計</string>
 </resources>
